<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:id="@+id/pUser_scrollViewA"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UsersActivity">

    <LinearLayout
        android:id="@+id/pUser_linearLayoutB"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="8dp"
        android:background="@color/teal_700">

        <androidx.cardview.widget.CardView
            android:id="@+id/pUser_cardViewC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_700"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:id="@+id/pUser_imageViewLogoD"
                android:layout_width="120dp"
                android:layout_height="130dp"
                android:src="@drawable/ic_users"
                android:contentDescription="@string/pUsers_contentDescription_imageLogo"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/pUser_textViewTitleE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:textSize="35sp"
            android:textColor="@color/white"
            android:text="@string/pUser_TextView_titleWelcome"/>

        <EditText
            android:id="@+id/pUser_editTextF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:background="@color/white"
            android:layout_margin="10dp"
            android:textStyle="normal"
            android:textSize="25sp"
            android:hint="@string/pUser_EditText_nameUser"
            android:drawableLeft="@drawable/ic_nameuser"/>
        <EditText
            android:id="@+id/pUser_editTextG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:background="@color/white"
            android:layout_margin="10dp"
            android:textStyle="normal"
            android:textSize="25sp"
            android:hint="@string/pUser_EditText_password"
            android:drawableLeft="@drawable/ic_lock"
            android:drawableRight="@drawable/ic_visibility"/>

        <Button
            android:id="@+id/pUser_buttonH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="6dp"
            android:backgroundTint="@color/purple_700"
            android:onClick="weekEnter"
            android:padding="8dp"
            android:text="@string/pUser_Button_enter"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pUser_textViewTitleI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:text="@string/pUser_TextView_register"/>

        <Button
            android:id="@+id/pUser_buttonJ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="6dp"
            android:backgroundTint="@color/purple_700"
            android:onClick="register"
            android:padding="8dp"
            android:text="@string/pUser_Button_createAccount"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pUser_textViewK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:drawableRight="@drawable/ic_info"
            android:gravity="center_horizontal"
            android:onClick="info"
            android:padding="12dp"
            android:text="@string/pUser_TextView_infoApp"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>