<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:id="@+id/pReg_scrollViewA"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:id="@+id/pReg_linearLayoutB"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="8dp"
        android:background="@color/teal_700">

        <androidx.cardview.widget.CardView
            android:id="@+id/pReg_cardViewC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_700"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:id="@+id/pReg_imageViewRegisterD"
                android:layout_width="240dp"
                android:layout_height="200dp"
                android:src="@drawable/ic_register"
                android:contentDescription="@string/pReg_contentDescription_imgRegisterLogo"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/pReg_textViewTitleE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:textSize="35sp"
            android:textColor="@color/white"
            android:text="@string/pReg_TextView_TitleRegister"/>

        <EditText
            android:id="@+id/pReg_editTextF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:background="@color/white"
            android:layout_margin="10dp"
            android:textStyle="normal"
            android:textSize="25sp"
            android:hint="@string/pReg_EditText_userName"
            android:drawableLeft="@drawable/ic_nameuser"/>

        <EditText
            android:id="@+id/pReg_editTextG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:background="@color/white"
            android:layout_margin="10dp"
            android:textStyle="normal"
            android:textSize="25sp"
            android:hint="@string/pReg_EditText_mail"
            android:drawableLeft="@drawable/ic_mail"/>

        <EditText
            android:id="@+id/pReg_editTextH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:background="@color/white"
            android:layout_margin="10dp"
            android:textStyle="normal"
            android:textSize="25sp"
            android:hint="@string/pReg_EditText_createPass"
            android:drawableLeft="@drawable/ic_lock"
            android:drawableRight="@drawable/ic_visibility"/>

        <EditText
            android:id="@+id/pReg_editTextI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:background="@color/white"
            android:layout_margin="10dp"
            android:textStyle="normal"
            android:textSize="25sp"
            android:hint="@string/pReg_EditText_confirmPass"
            android:drawableLeft="@drawable/ic_lock"
            android:drawableRight="@drawable/ic_visibility"/>

        <Button
            android:id="@+id/pUser_buttonH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="6dp"
            android:backgroundTint="@color/purple_700"
            android:onClick="weekReg"
            android:padding="8dp"
            android:text="@string/pReg_Button_register"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.core.widget.NestedScrollView>