<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:id="@+id/p_scrollViewA"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/p_linearLayoutB"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="8dp"
        android:background="@color/teal_700">

        <TextView
            android:id="@+id/p_textViewTitleC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_margin="20dp"
            android:padding="10dp"
            android:textStyle="bold"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:text="@string/p_TextView_title"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/p_cardViewD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_700"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:id="@+id/p_imageViewLogoE"
                android:layout_width="220dp"
                android:layout_height="220dp"
                android:src="@drawable/ic_meal"
                android:contentDescription="@string/p_contentDescription_imageLogo"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/p_textViewIntroF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_margin="20dp"
            android:padding="10dp"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:text="@string/p_TextView_secondTitle"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/p_cardViewG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_700"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:id="@+id/p_imageViewListH"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/ic_checklist"
                android:contentDescription="@string/p_contentDescription_imageChecklist"/>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/p_buttonI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:backgroundTint="@color/purple_700"
            android:onClick="enter"
            android:padding="10dp"
            android:text="@string/p_Button_Enter"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.core.widget.NestedScrollView>